fixes switch tab content appear scrollbar

--- a/src/jigsaw/component/box/tabs-wrapper/tabs-wrapper.scss
+++ b/src/jigsaw/component/box/tabs-wrapper/tabs-wrapper.scss
@@ -30,16 +30,15 @@ $editable-tab-title-prefix-cls: #{$jigsaw-prefix}-editable-tab-title;
             flex-direction: column;
             height: 100%;
             &-content {
-                flex-grow: 1;
-                flex-basis: 0;
-                overflow: auto;
+                flex: 1;
+                overflow: hidden;
                 .#{$editable-box-prefix-cls} {
                     height: 100%;
                 }
             }
             &-tabpane {
                 height: 100%;
-                &.#{$tab-prefix}-tabpane-inactive{
+                &.#{$tab-prefix}-tabpane-inactive {
                     height: 0;
                 }
             }
